hledger/test/errors/commodities.j
#!/usr/bin/env -S hledger check commodities -f

account a

2022/1/1
  (a)  A 1
